--- a/studyCSharp/studyCSharp.csproj
+++ b/studyCSharp/studyCSharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,9 +6,5 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="..\_03_VariabiliECostanti.cs" Link="_03_VariabiliECostanti.cs" />
-  </ItemGroup>
 
 </Project>
